fix preset add
Former-commit-id: 506326770a3e3dca3564bd1cbece111a597a4c25